# oh_my_documents

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  color-map.md  index.html  pyproject.toml
data_collect_documents_20260702/: TRANSFER_MANIFEST.md  data_collect_agentcore_v1_dynamodb_query_guide.md  data_collect_dynamodb_vector_v2_usage_guide.md  data_collect_korea_data_preprocessing_result_report.md  data_collect_kr_20260629_preprocessing_redesign_spec.md  data_collect_kr_lambda_sfn_batch_reset_completion_20260630.md  data_collect_kr_lambda_sfn_batch_reset_next_session_handoff_20260630.md  data_collect_kr_vector_metadata_refresh_plan_20260630.md  data_collect_lambda_titan_vector_enrichment_analysis_20260630.md  data_collect_preprocessing_report.md
docs/: AGENT.md  OPENVIKING_INDEX.md  OPENVIKING_MCP.md  OPENVIKING_SUMMARY.md
pages/: 00_project_plan.html  01_requirements.html  02_overturizim.html  02_service_flow.html  03_data_collect_plan.html  03_korea_japan.html  03_technical_spec.html  04_api_spec.html  04_data_collect_plan.html  04_database_design.html  04_neptune_alternative.html  04_trip_train.html  05_agent_spec.html  05_api_spec.html  05_astro_rag_proposal.html  05_database_design.html  05_technical_spec.html  06_agent_spec.html  06_api_spec.html  06_database_design.html  06_kdrama-pipeline.html  06_technical_spec.html  07_agent_spec.html  07_api_spec.html  08_data_preprocessing.html  09_ui_ux_guide.html  10_test_plan.html  11_deployment_ops.html  11_troubleshooting.html  12_llm_result_report.html  12_test_result_report.html  96_market_research.html
(+671 files in other folders)
